Added a new mini project - Gallery

--- a/grid.html
+++ b/grid.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Grid</title>
   </head>
+  <link rel="stylesheet" href="bootstrap.css">
   <body>
-    
+
   </body>
 </html>
