--- a/07_Image_Gallery/Gallary.html
+++ b/07_Image_Gallery/Gallary.html
@@ -18,16 +18,16 @@
 
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-      <div class="navbar-header">
+      <div class="navbar-header" class="colorme">
         <a class="navbar-brand" href="#">IMGS</a>
       </div>
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav" class="colorme">
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
 
         <!-- <li><a href="#">Page 2</a></li> -->
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right" class="colorme">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
