--- a/07_Image_Gallery/Gallary.html
+++ b/07_Image_Gallery/Gallary.html
@@ -15,22 +15,28 @@
 <link rel="stylesheet" href="gallery.css">
 
 <body>
-
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar-inverse navbar-expand-lg navbar-fixed-top">
     <div class="container">
       <div class="navbar-header" class="colorme">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+       </button>
         <a class="navbar-brand" href="#">IMGS</a>
       </div>
-      <ul class="nav navbar-nav" class="colorme">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-
-        <!-- <li><a href="#">Page 2</a></li> -->
-      </ul>
-      <ul class="nav navbar-nav navbar-right" class="colorme">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
+    <div class="collapse navbar-collapse" id="bs-nav-demo">
+        <ul class="nav navbar-nav" class="colorme">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <!-- <li><a href="#">Page 2</a></li> -->
+        </ul>
+        <ul class="nav navbar-nav navbar-right" class="colorme">
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
