--- a/Project/index.html
+++ b/Project/index.html
@@ -8,12 +8,48 @@
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-  <title>Hello, world!</title>
+  <title>Candy Land</title>
 </head>
 
 <body>
-  <h1>Hello, world!</h1>
+  <!-- <h1>Hello, world!</h1> -->
+
+  <nav class="navbar navbar-expand-lg navbar-custom fixed-top" id="mainnavbar">
+    <a class="navbar-brand" href="#">CANDY</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto" style="text-transform:uppercase">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Tickets</a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
+
+  <section class="container-fluid px-0">
+    <div class="row align-items-center">
+      <div class="col-lg-6 d-none d-lg-block center-block text-center" style="color:white">
+        <h1>MUSEUM<span style="color:#EA1C2C">/</span>OF<span style="color:#EA1C2C">/</span>CANDY</h1>
+      </div>
+      
+      <div class="col-lg-6 col-md-12" id="hand">
+         <img src="IMG/hand2.png" class="img-fluid">
+      </div>
+  </section>
+
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
