--- a/RGB Color guessing game/game.html
+++ b/RGB Color guessing game/game.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Color Game</title>
@@ -9,15 +10,20 @@
 
 <body>
   <h1 style="color:#999966; background-color:#66ccff">The great color game</h1>
-  <div class="square" id="one"></div>
-  <div class="square" id="two"></div>
-  <div class="square" id="three"></div>
-  <div class="square" id="four"></div>
-  <div class="square" id="five"></div>
-  <div class="square" id="six"></div>
+  <div id="cont">
+    <div class="square" id="one"></div>
+    <div class="square" id="two"></div>
+    <div class="square" id="three"></div>
+    <div class="square" id="four"></div>
+    <div class="square" id="five"></div>
+    <div class="square" id="six"></div>
+  </div>
 
 
-<script src="game.js" charset="utf-8" type="text/javascript"></script>
+
+
+
+  <script src="game.js" charset="utf-8" type="text/javascript"></script>
 </body>
 
 </html>
