Added event listener

--- a/RGB Color guessing game/game.html
+++ b/RGB Color guessing game/game.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 style="color:#999966; background-color:#66ccff">The great color game</h1>
+  <h1 style="color:#999966; background-color:#66ccff">The great <span id="rgb">RGB</span> color game</h1>
   <div id="cont">
     <div class="square" id="one"></div>
     <div class="square" id="two"></div>
