--- a/RGB Color guessing game/game.html
+++ b/RGB Color guessing game/game.html
@@ -5,11 +5,18 @@
   <meta charset="utf-8">
   <title>Color Game</title>
   <link rel="stylesheet" type="text/css" href="game.css">
-
 </head>
 
 <body>
-  <h1 style="color:#999966; background-color:#66ccff">The great <span id="rgb">RGB</span> color game</h1>
+  <div class="header" >
+    <h1 style="color:#999966" align = "Center">The great</h1>;
+    <h1 style="color:#999966" align = "Center" id = "rgb"> RGB </h1>;
+    <h1 style="color:#999966" align = "Center">color game</h1>;
+  </div>
+
+  <p id="try"></p>
+
+  <button type="button" onClick="window.location.reload();">Try Again</button>
   <div id="cont">
     <div class="square" id="one"></div>
     <div class="square" id="two"></div>
