--- a/jQueryClasses/methods.html
+++ b/jQueryClasses/methods.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>jQuery Methods</title>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -18,30 +19,33 @@
 			color: gray;
 			text-decoration: line-through;
 		}
-
 	</style>
 </head>
+
 <body>
 
-<h1>jQuery Methods Demo Page</h1>
+	<h1>jQuery Methods Demo Page</h1>
 
-<input type="text" placeholder="your name">
+	<input type="text" placeholder="your name">
 
-<select>
-	<option>Ostrich</option>
-	<option>Turtle</option>
-	<option>Toad</option>
-</select>
+	<select>
+		<option>Ostrich</option>
+		<option>Turtle</option>
+		<option>Toad</option>
+	</select>
 
-<ul>
-	<li>Skittles</li>
-	<li>Starburst</li>
-	<li>Twix</li>
-</ul>
+	<ul>
+		<li>Skittles</li>
+		<li>Starburst</li>
+		<li>Twix</li>
+	</ul>
 
-<img src="http://i.imgur.com/zvANQeG.jpg">
-<img src="http://i.imgur.com/zvANQeG.jpg">
-<img src="http://i.imgur.com/zvANQeG.jpg">
+	<img src="http://i.imgur.com/zvANQeG.jpg">
+	<img src="http://i.imgur.com/zvANQeG.jpg">
+	<img src="http://i.imgur.com/zvANQeG.jpg">
+
+	<script type="text/javascript" src="methods.js"></script>
 
 </body>
+
 </html>
