Created proper folders and files

--- a/Project-ToDoList/index.html
+++ b/Project-ToDoList/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <head>
+        <link rel="stylesheet" type="text/css" href="Assets/css/todo.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        </head>
     <meta charset="UTF-8">
     <title>To-Do List</title>
 </head>
 <body>
-    
+    Hello World
+
+
+    <script type="text/javascript" src="Assets/js/todo.js">
+
+
 </body>
 </html>
