On the way to complete the to do list project\

--- a/Project-ToDoList/index.html
+++ b/Project-ToDoList/index.html
@@ -17,7 +17,7 @@
         <input type="text">
     
         <ul>
-            <li><span id="delete">X</span> Go to the class</li>
+            <li><span>X</span> Go to the class</li>
             <li><span>X</span> Buy new stuff</li>
             <li><span>X</span> Goo</li>
         </ul>
