Done with the styling part of the Project

--- a/Project-ToDoList/index.html
+++ b/Project-ToDoList/index.html
@@ -14,7 +14,7 @@
     <div id="container">
         <h1>To-do-List</h1>
 
-        <input type="text">
+        <input type="text" placeholder="Add new ToDo">
     
         <ul>
             <li><span>X</span> Go to the class</li>
