Added shadow and finished it.

--- a/Project-ToDoList/index.html
+++ b/Project-ToDoList/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="Assets/css/todo.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- //Including font awesome -->
+    <link href='https://fonts.googleapis.com/css?family=Alegreya Sans SC' rel='stylesheet'>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
    </head>
 
@@ -18,7 +19,7 @@
             <i class="fa fa-plus" aria-hidden="true"></i>   
         </h1>
         
-        <input type='text' placeholder="Add new ToDo">
+        <input type='text' placeholder="Add New ToDo">
 
         <ul>
             
